--- a/app/globals.css
+++ b/app/globals.css
@@ -38,6 +38,11 @@ main {
   flex-direction: column;
 }
 
+.wh100 {
+  width: 100%;
+  height: 100%;
+}
+
 .initial {
   width: 100%;
   height: 100%;
@@ -74,15 +79,15 @@ p.subTitle {
   font-size: 2rem;
   font-family: 'inter';
   font-weight: 200;
-  color:white;
+  color: white;
 }
 
 .satsfi-area {
   width: 100%;
   height: 50%;
-  
+
   position: relative;
-  
+
   background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.1) 1px, transparent 1px), linear-gradient(rgba(0, 0, 0, 0.1) 1px, transparent 1px);
   background-size: 20px 20px;
 
@@ -102,7 +107,7 @@ p.subTitle {
 }
 
 h1.logo-title {
-  color:#FFCA41;
+  color: #FFCA41;
   font-size: 5rem;
   font-family: 'Inter';
   font-weight: bold;
@@ -135,7 +140,7 @@ button.launch-button {
 
   padding: 5%;
 
-  transition: 0.5s ease-in;
+  transition: 0.4s ease-in;
 
   cursor: pointer;
   user-select: none;
@@ -143,44 +148,235 @@ button.launch-button {
 
 button.launch-button:hover {
   color: white;
-  background: linear-gradient(to right, #FF9800, #cf7d02);
+  background-color: #cf7d0273;
   border: 2px solid #b47312;
-}
-
-@keyframes flutuar {
-  0% {
-      transform: translateY(0);
-  }
-  50% {
-      transform: translateY(-10px);
-  }
-  100% {
-      transform: translateY(0);
-  }
 }
 
 /* [TOPIC AREA] */
 
 .topic {
   width: 100%;
-  height: 50%;
-  background-color: green;
+  height: 75%;
+  background-color: white;
+  position: relative;
+
+  gap: 2%;
+  padding: 2%;
 }
+
+.card-privacy {
+  width: 25%;
+  height: 100%;
+
+  padding: 1%;
+
+  border: 1px solid #8105BC;
+
+  background-color: white;
+
+  border-radius: 4px;
+}
+
+.card-ai {
+  width: 25%;
+  height: 100%;
+
+  padding: 1%;
+
+  border: 1px solid #8105BC;
+
+  background-color: white;
+
+  border-radius: 4px;
+}
+
+.card-fee {
+  width: 25%;
+  height: 100%;
+
+  padding: 1%;
+
+  border: 1px solid #8105BC;
+
+  background-color: white;
+
+  border-radius: 4px;
+}
+
+.cardHead {
+  width: 100%;
+  height: 25%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  text-align: center;
+}
+
+.cardBody {
+  width: 100%;
+  height: 50%;
+}
+
+.cardFooter {
+  width: 100%;
+  height: 50%;
+
+  text-align: center;
+}
+
+.cardFooter h2 {
+  color: #945C92;
+  font-weight: 300;
+  font-size: 1rem;
+  text-align: center;
+  font-family: 'Inter';
+}
+
+.cardHead h2 {
+  font-family: 'Inter';
+  font-weight: bold;
+  background: linear-gradient(to right, #ED53E6, #8105BC);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+}
+
+/* [ HOW TO AREA ] */
 
 .howto {
   width: 100%;
-  height: 50%;
-  background-color: purple;
+  height: 100%;
+  background-color: #FBF7F4;
 }
 
+.wrappedArea {
+  width: 100%;
+  height: 100%;
+}
+
+.videoSection {
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  position: relative;
+
+  padding-left: 2.5%;
+  padding-right: 2.5%;
+}
+
+img#cellImage {
+  width: 100%;
+  height: auto;
+}
+
+#video {
+  position: absolute;
+  top: 3%;
+  left: 8.7%;
+  width: 82.7%;
+  height: 93%;
+  object-fit: cover;
+  z-index: 2;
+}
+
+.descriptionArea {
+  width: 100%;
+  height: 50%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.titleArea {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding-right: 10%;
+}
+
+.descriptionArea h2 {
+  font-size: 3rem;
+  font-family: 'Poppins';
+  font-weight: bold;
+}
+
+.descriptionArea h3 {
+  font-size: 1.6rem;
+  font-family: 'Open sans';
+  font-weight: lighter;
+}
+#paperButton {
+  width: 50%;
+  height: 100%;
+  
+  margin-top: 2%;
+  
+  color: #45abdb;
+  font-size: 1.4rem;
+  
+  transition: 1s;
+  background: transparent;
+  
+  border-radius: 4px;
+  border: 2px solid #45abdb;
+
+  cursor: pointer;
+}
+
+#paperButton:hover {
+  color:white;
+  background-color: #45abdb;
+}
+/* [ LIGHTNING AREA ] */
 .lightning-area {
   width: 100%;
   height: 25%;
-  background-color: yellow;
+  background-color: white;
 }
 
+.lightning-area h2 {
+  font-size: 2.5rem;
+  font-family: 'Inter';
+  font-weight: 300;
+  background: linear-gradient(to right, #ED53E6, #8105BC);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+}
+
+/* [ FAQ AREA ] */
 .faq {
   width: 100%;
   height: 75%;
-  background-color: red;
+  background-color: #240C42;
+}
+
+.icon-area {
+  width: 100%;
+  height: 25%;
+  border-bottom: 1px solid #FFCA41;
+  padding-bottom: 5%;
+  margin-bottom: 5%;
+}
+
+.icon-area h2 {
+  color: #FFCA41;
+  font-size: 4rem;
+  font-weight: 300;
+  font-family: 'Inter';
+}
+
+.tou-area h2 {
+  color: #B7B8C3;
+  font-size: 2rem;
+  font-weight: 300;
+  font-family: 'Inter';
 }
