--- a/app/globals.css
+++ b/app/globals.css
@@ -44,6 +44,93 @@ main {
   height: 100%;
 }
 
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #3C5774;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #3C5774;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+.slidecontainer {
+  width: 100%;
+}
+
+.rangeSlider {
+  -webkit-appearance: none;  
+  appearance: none;
+  width: 70%;
+  height: 7px; 
+  background: #3C5774;
+  outline: none; 
+  opacity: 0.7;
+  -webkit-transition: .2s; 
+  transition: opacity .2s;
+  border-radius: 7px;
+}
+
+.rangeSlider:hover {
+  opacity: 1; 
+}
+
+.rangeSlider::-webkit-slider-thumb {
+  -webkit-appearance: none; 
+  appearance: none;
+  width: 25px; 
+  height: 25px; 
+  background: #07CCA0; 
+  cursor: pointer; 
+  border-radius: 50px;
+}
+
+.rangeSlider::-moz-range-thumb {
+  width: 25px; 
+  height: 25px; 
+  background: #07CCA0; 
+  cursor: pointer; 
+  border-radius: 50px;
+}
+
 .initial {
   width: 100%;
   height: 100%;
