--- a/app/globals.css
+++ b/app/globals.css
@@ -131,6 +131,10 @@ input:checked + .slider:before {
   border-radius: 50px;
 }
 
+#body-area svg {
+  width: 84%;
+}
+
 .initial {
   width: 100%;
   height: 100%;
