--- a/app/globals.css
+++ b/app/globals.css
@@ -78,14 +78,62 @@ input:focus + .slider {
 }
 
 input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
+  -webkit-transform: translateX(25px);
+  -ms-transform: translateX(25px);
+  transform: translateX(25px);
 }
 
 /* Rounded sliders */
 .slider.round {
   border-radius: 34px;
+}
+
+@media only screen and (min-height: 900px) {
+  .slider.round {
+    width: 120px;
+    height: 50px;
+  }
+
+  .slider:before {
+    width: 34px;
+    height: 34px;
+    margin-bottom: 2%;
+  }
+
+  input:checked + .slider:before {
+    -webkit-transform: translateX(70px);
+    -ms-transform: translateX(70px);
+    transform: translateX(70px);
+  }
+}
+
+@media only screen and (min-width: 2560px) {
+  #myRange {
+     height: 16px;
+  }
+
+  #myRange::-webkit-slider-thumb {
+    width: 50px;
+    height: 50px;
+  }
+
+  #myRange::-moz-range-thumb {
+    width: 50px;
+    height: 50px;
+  }
+}
+
+
+@media only screen and (max-width: 1920px) {
+   #body-area svg {
+    max-width: 84%;
+   }
+}
+
+@media only screen and (max-width: 1600px) {
+  #body-area svg {
+    max-width: 75%;
+   }
 }
 
 .slider.round:before {
@@ -223,7 +271,8 @@ h1.logo-title {
 button.launch-button {
   width: 100%;
   height: 100%;
-
+  max-width: 250px;
+  
   color: #FF9800;
   font-size: 1.4rem;
   font-family: 'Roboto';
