--- a/app/globals.css
+++ b/app/globals.css
@@ -18,10 +18,13 @@
 
 html,
 body {
-  overflow-x: hidden;
-  background-color: transparent;
   height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow-x: hidden;
   scroll-behavior: smooth;
+  background-color: transparent;
 }
 
 main {
@@ -141,10 +144,18 @@ input:checked + .slider:before {
 }
 
 @keyframes dots {
-  0%   { content: ""; }
-  33%  { content: "."; }
-  66%  { content: ".."; }
-  100% { content: "..."; }
+  0% {
+    content: "";
+  }
+  33% {
+    content: ".";
+  }
+  66% {
+    content: "..";
+  }
+  100% {
+    content: "...";
+  }
 }
 
 .audio-donate {
@@ -291,7 +302,7 @@ h2.description-title {
 
 p.subTitle {
   font-size: 2rem;
-  font-family: "inter";
+  font-family: "Inter";
   font-weight: 200;
   color: white;
 }
@@ -330,7 +341,6 @@ h1.logo-title {
   font-size: 5rem;
   font-family: "Inter";
   font-weight: bold;
-  border-bottom: 5px solid #ffca41;
 }
 
 .button-area {
@@ -355,8 +365,8 @@ button.launch-button {
 
   background-color: transparent;
 
-  border-radius: 12px;
-  border: 2px solid #ff9800;
+  border-radius: 5px;
+  border: 1px solid #ff9800;
 
   padding: 5%;
 
@@ -364,6 +374,7 @@ button.launch-button {
 
   cursor: pointer;
   user-select: none;
+  outline: none;
 }
 
 #link-initial-button-style {
@@ -385,7 +396,7 @@ button.launch-button {
 }
 
 button.launch-button:hover {
-  color: white;
+  color: #ff9800;
   background-color: #cf7d0273;
   border: 2px solid #b47312;
 }
@@ -639,93 +650,13 @@ img#cellImage {
   font-family: "Inter";
 }
 
-@media only screen and (min-height: 900px) {
-  .initialArea .description-area h2.description-title {
-    font-size: 7rem;
-    line-height: 5.7rem;
-  }
-  h1.logo-title {
-    font-size: 7rem;
-  }
-  .cardHead h2 {
-    font-size: 3rem;
-  }
-  .cardFooter h2 {
-    font-size: 1.6rem;
-  }
-  .wrappedArea {
-    padding-left: 7%;
-  }
-  .titleArea {
-    padding-right: 0;
-  }
-  .titleArea h2 {
-    font-size: 4rem;
-  }
-  .titleArea h3 {
-    width: 75%;
-    font-size: 1.9rem;
-  }
-  #paperButton {
-    height: 20%;
-  }
-}
-
-@media only screen and (max-width: 1200px) {
-  h2.description-title {
-    width: 100%;
-    font-size: 3rem;
-    line-height: 2.5rem;
-  }
-  .button-area-satsfi {
-    width: 70%;
-  }
-  .card-privacy {
-    width: 50%;
-  }
-  .card-ai {
-    width: 50%;
-  }
-  .card-fee {
-    width: 50%;
-  }
-
-  .wrappedArea {
-    flex-direction: column;
-  }
-
-  img#cellImage {
-    width: 50%;
-    height: auto;
-  }
-
-  .titleArea {
-    justify-content: center;
-    align-items: center;
-    padding-left: 5%;
-    padding-right: 5%;
-  }
-
-  .descriptionArea h3 {
-    text-align: center;
-  }
-
-  #paperButton {
-    width: 100%;
-    height: 25%;
-  }
-
-  .faq-area {
-    height: 50%;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-  }
-}
-
 @media only screen and (max-width: 700px) {
   .initialArea {
     flex-direction: column;
+  }
+
+  .cardFooter {
+    width: 75%;
   }
 
   .description-area {
@@ -815,5 +746,135 @@ img#cellImage {
   .lightning-area h2 {
     font-size: 1.4rem;
     text-align: center;
+  }
+}
+
+@media only screen and (min-height: 900px) {
+  .initialArea .description-area h2.description-title {
+    font-size: 7rem;
+    line-height: 5.7rem;
+  }
+  h1.logo-title {
+    font-size: 7rem;
+  }
+  .cardHead h2 {
+    font-size: 3rem;
+  }
+  .cardFooter h2 {
+    font-size: 1.6rem;
+  }
+  .wrappedArea {
+    padding-left: 7%;
+  }
+  .titleArea {
+    padding-right: 0;
+  }
+  .titleArea h2 {
+    font-size: 4rem;
+  }
+  .titleArea h3 {
+    width: 75%;
+    font-size: 1.9rem;
+  }
+  #paperButton {
+    height: 20%;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  h2.description-title {
+    width: 100%;
+    font-size: 3rem;
+    line-height: 2.5rem;
+  }
+  .button-area-satsfi {
+    width: 70%;
+  }
+  .card-privacy {
+    width: 50%;
+  }
+  .card-ai {
+    width: 50%;
+  }
+  .card-fee {
+    width: 50%;
+  }
+
+  .wrappedArea {
+    flex-direction: column;
+  }
+
+  img#cellImage {
+    width: 93%;
+    height: auto;
+  }
+
+  .titleArea {
+    justify-content: center;
+    align-items: center;
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+
+  .descriptionArea h3 {
+    text-align: center;
+  }
+
+  #paperButton {
+    width: 100%;
+    height: 25%;
+  }
+
+  .faq-area {
+    height: 50%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+}
+
+@media only screen and (min-width: 1900px) {
+  button.launch-button {
+    font-size: 2rem;
+    width: 100%;
+    max-width: 320px;
+  }
+  .titleArea {
+    justify-content: center;
+  }
+  .lightning-area h2 {
+    font-size: 3rem;
+  }
+  .icon-area h2 {
+    font-size: 5rem;
+  }
+  .tou-area h2 {
+    font-size: 3rem;
+  }
+}
+
+@media only screen and (min-width: 2100px) {
+  button.launch-button {
+    font-size: 3rem;
+    width: 100%;
+    max-width: 500px;
+  }
+  .lightning-area h2 {
+    font-size: 4rem;
+  }
+  .icon-area h2 {
+    font-size: 6.1rem;
+  }
+  .tou-area h2 {
+    font-size: 4rem;
+  }
+  .cardFooter h2 {
+    font-size: 2rem;
+  }
+  h1.logo-title {
+    font-size:10rem;
+  }
+  p.subTitle {
+    font-size: 4rem;
   }
 }
